--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </p>
 
                 <p class="text-center">
-                    I am constantly building this website whenever I have a time<small>*</small>. Meanwhile, checkout my online presence on:
+                    I am constantly building this website whenever I have a time. Meanwhile, checkout my online presence on:
                 </p>
                 
                 <div class="mx-auto">
