--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-12 col-md-8 offset-md-2">
-                <h1 class="text-center">awesomeness is coming 👌</h1>
+                <h1 class="text-center">awesomeness is coming soon 👌</h1>
                 <p class="text-center">
                     Hi, my name is Arief Ramadhan and I am a product manager at PT Nusa Satu Inti Artha (DOKU). I love to explore about product management, user experience, and engineering.
                     
