Update job title

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="col-12 col-md-8 offset-md-2">
                 <h1 class="text-center">awesomeness is coming soon 👌</h1>
                 <p class="text-center">
-                    Hi, my name is Arief Ramadhan and I am a product manager at PT Nusa Satu Inti Artha (DOKU). I love to explore about product management, user experience, and engineering.
+                    Hi, my name is Arief Ramadhan and I am a product owner at PT Nusa Satu Inti Artha (DOKU). I love to explore about product management, user experience, and engineering.
                     
                 </p>
 
