Optimize meta keywords

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Arief R ramadhan Personal Web"
+      content="Arief R Ramadhan Personal Web. He is a Product Manager and enthusiast who loves to explore about product management, user experience design, and software development."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
