Added meta keywords

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Arief R Ramadhan Personal Web. He is a Product Manager and enthusiast who loves to explore about product management, user experience design, and software development."
     />
+    <meta name="keywords" content="arief rizky ramadhan, arief r ramadhan, product management, product development, user experience design, ux design, software development, software engineering" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
